LP-685 sonarQube change use toList() instead of collect(Collectors.toList()