@@ -19,7 +19,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static uk.gov.companieshouse.limitedpartnershipsapi.utils.Constants.FILING_KIND_LIMITED_PARTNER;
 import static uk.gov.companieshouse.limitedpartnershipsapi.utils.Constants.LINK_SELF;
@@ -117,12 +116,12 @@ public class LimitedPartnerService {
         return repository.findByTransactionId(transaction.getId()).stream()
                 .map(mapper::daoToDto)
                 .map(LimitedPartnerDto::getData)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LimitedPartnerDto> getLimitedPartnerList(Transaction transaction) {
         return repository.findByTransactionId(transaction.getId()).stream()
                 .map(mapper::daoToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
